@startuml
class AdressDTO {
}
class FindAdressesWrapper <<partial>> {
    + FindAdressesWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> FindAdresses(searchText:String) : List<AdressDTO>
}
class GetAdressWrapper <<partial>> {
    + GetAdressWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> GetAdress(id:Guid) : AdressDTO
}
class SetAdressWrapper <<partial>> {
    + SetAdressWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> SetAdress(id:Guid, adress:AdressDTO) : AdressDTO
}
class DeleteAdressWrapper <<partial>> {
    + DeleteAdressWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> DeleteAdress(id:Guid) : AdressDTO
}
class AdressTypes <<static>> <<partial>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class AdressTypes <<static>> <<partial>> {
    + {static} GetTypes(commandTypes:List<CommandTypeDTO>) : void
}
class "List`1"<T> {
}
BaseDTO <|-- AdressDTO
AdressDTO --> "TypeId" Guid
AdressDTO --> "Name1" String
AdressDTO --> "Name2" String
AdressDTO --> "Adress1" String
AdressDTO --> "Adress2" String
AdressDTO --> "Housenumber" String
AdressDTO --> "City" String
AdressDTO --> "Postcode" String
CommandWrapper <|-- FindAdressesWrapper
FindAdressesWrapper --> "TypeId" Guid
FindAdressesWrapper --> "Cmd" CommandDTO
FindAdressesWrapper --> "SearchText" String
FindAdressesWrapper --> "Result<AdressDTO>" "List`1"
CommandWrapper <|-- GetAdressWrapper
GetAdressWrapper --> "TypeId" Guid
GetAdressWrapper --> "Cmd" CommandDTO
GetAdressWrapper --> "Id" Guid
GetAdressWrapper --> "Result" AdressDTO
CommandWrapper <|-- SetAdressWrapper
SetAdressWrapper --> "TypeId" Guid
SetAdressWrapper --> "Cmd" CommandDTO
SetAdressWrapper --> "Id" Guid
SetAdressWrapper --> "Adress" AdressDTO
SetAdressWrapper --> "Result" AdressDTO
CommandWrapper <|-- DeleteAdressWrapper
DeleteAdressWrapper --> "TypeId" Guid
DeleteAdressWrapper --> "Cmd" CommandDTO
DeleteAdressWrapper --> "Id" Guid
DeleteAdressWrapper --> "Result" AdressDTO
class BaseDTO <<partial>> {
    # StringFromPropertyList(list:List<PropertyDTO>, name:string) : string
    # StringToPropertyList(list:List<PropertyDTO>, name:string, newValue:string) : void
    # BooleanFromPropertyList(list:List<PropertyDTO>, name:string) : Boolean
    # BooleanToPropertyList(list:List<PropertyDTO>, name:string, newValue:Boolean) : void
}
class ValueDTO {
    + {static} Create(v:T) : ValueImplDTO<T>
    + Int32Value : Int32? <<get>>
    + Int64Value : Int64? <<get>>
    + DoubleValue : Double? <<get>>
    + BooleanValue : Boolean? <<get>>
    + <<override>> ToString() : string
}
class ArgumentDTO {
}
class "ValueImplDTO`1"<T> {
    + ValueImplDTO(v:T)
    + Value : T <<get>> <<set>>
    + <<override>> ObjectType : string <<get>>
}
ValueDTO --> "StringValue" String
ValueDTO --> "ObjectType" String
ValueDTO --> "ObjectValue" JsonDocument
ArgumentDTO --> "Name" String
ArgumentDTO --> "Value" ValueDTO
ValueDTO +-- "ValueImplDTO`1"
ValueDTO <|-- "ValueImplDTO`1"
"ValueImplDTO`1" --> "ObjectValue" JsonDocument
class BaseDTO <<partial>> {
}
class PropertyDTO {
}
class ObjectDTO {
}
class TypeDTO {
}
class BaseTypes <<static>> <<partial>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class BaseTypes <<static>> <<partial>> {
    + {static} GetTypes(commandTypes:List<CommandTypeDTO>) : void
}
class "List`1"<T> {
}
BaseDTO --> "TypeId" Guid
BaseDTO --> "Id" Guid
BaseDTO --> "Type" Guid
PropertyDTO --> "TypeId" Guid
PropertyDTO --> "Name" String
PropertyDTO --> "Value" ValueDTO
BaseDTO <|-- ObjectDTO
ObjectDTO --> "TypeId" Guid
ObjectDTO --> "Properties<PropertyDTO>" "List`1"
BaseDTO <|-- TypeDTO
TypeDTO --> "TypeId" Guid
class ObjectWrapper {
    + ObjectWrapper(dto:ObjectDTO)
}
class CommandWrapper {
    + CommandWrapper(dto:CommandDTO)
    # Get(cmd:CommandDTO, name:string, target:(Func<T> get, Action<T> set)) : void
    # Get(cmd:CommandDTO, name:string, target:(Func<Guid> get, Action<Guid> set)) : void
    # Set(cmd:CommandDTO, name:string, value:T) : void
}
ObjectWrapper --> "_dto" ObjectDTO
CommandWrapper --> "Cmd" CommandDTO
class CommandDTO {
}
class ParamDTO {
}
class CommandTypeDTO {
}
class GetCommandTypesWrapper <<partial>> {
    + GetCommandTypesWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> GetCommandTypes() : List<CommandTypeDTO>
}
class SampleCommandWrapper <<partial>> {
    + SampleCommandWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> SampleCommand(firstOne:String, secondOne:Boolean) : void
}
class CommandTypes <<static>> <<partial>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class CommandTypes <<static>> <<partial>> {
    + {static} GetTypes(commandTypes:List<CommandTypeDTO>) : void
}
class "List`1"<T> {
}
BaseDTO <|-- CommandDTO
CommandDTO --> "TypeId" Guid
CommandDTO o-> "Response" Boolean
CommandDTO o-> "Arguments<PropertyDTO>" "List`1"
ParamDTO --> "TypeId" Guid
ParamDTO --> "Name" String
ParamDTO --> "Type" String
TypeDTO <|-- CommandTypeDTO
CommandTypeDTO --> "TypeId" Guid
CommandTypeDTO --> "Name" String
CommandTypeDTO --> "Result" String
CommandTypeDTO --> "Parameters<ParamDTO>" "List`1"
CommandWrapper <|-- GetCommandTypesWrapper
GetCommandTypesWrapper --> "TypeId" Guid
GetCommandTypesWrapper --> "Cmd" CommandDTO
GetCommandTypesWrapper --> "Result<CommandTypeDTO>" "List`1"
CommandWrapper <|-- SampleCommandWrapper
SampleCommandWrapper --> "TypeId" Guid
SampleCommandWrapper --> "Cmd" CommandDTO
SampleCommandWrapper --> "FirstOne" String
SampleCommandWrapper --> "SecondOne" Boolean
class ExampleDTO {
}
class ExampleWrapper <<partial>> {
    + ExampleWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> Example(id:Guid) : ExampleDTO
}
class ExampleTypes <<static>> <<partial>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class ExampleTypes <<static>> <<partial>> {
    + {static} GetTypes(commandTypes:List<CommandTypeDTO>) : void
}
BaseDTO <|-- ExampleDTO
ExampleDTO --> "TypeId" Guid
ExampleDTO --> "One" String
ExampleDTO --> "Two" Boolean
CommandWrapper <|-- ExampleWrapper
ExampleWrapper --> "TypeId" Guid
ExampleWrapper --> "Cmd" CommandDTO
ExampleWrapper --> "Id" Guid
ExampleWrapper --> "Result" ExampleDTO
class WeatherForecast {
    + TemperatureC : int <<get>> <<set>>
    + TemperatureF : int <<get>>
    + Summary : string <<get>> <<set>>
}
WeatherForecast --> "Date" DateTime
@enduml
